Fix the Dark Mode font size

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -374,7 +374,7 @@
 
   /* responsive typography */
   --hiq-unitless-min-font-size: 17;
-  --hiq-unitless-max-font-size: 20;
+  --hiq-unitless-max-font-size: 17;
 
   /* line height */
   --hiq-line-height-base: 1.8;
